<resources>
    <string name="app_name">New_Calculator_Fr</string>




    <string name="calculation">2.00</string>
    <string name="equation">1+1</string>
    <string name="button_string_1">1</string>
    <string name="button_number_2">2</string>
    <string name="button_string_3">3</string>
    <string name="button_string_4">4</string>
    <string name="button_string_5">5</string>
    <string name="button_string_6">6</string>
    <string name="button_string_7">7</string>
    <string name="button_string_8">8</string>
    <string name="button_string_9">9</string>
    <string name="button_string_0">0</string>
    <string name="button_string_00">00</string>
    <string name="button_string_.">.</string>


    <string name="button_string_plus">+</string>
    <string name="button_string_subtract">-</string>
    <string name="button_string_multiple">x</string>
    <string name="button_string_divide">÷</string>

    <string name="button_string_percent">%</string>
    <string name="button_string_equals">=</string>
    <string name="button_string_AC">AC</string>
    <string name="button_string_C">C</string>


</resources>